import files, archives, duplicates computation